Fix the layout and align issues for the news box

--- a/css/main.css
+++ b/css/main.css
@@ -98,11 +98,13 @@ tr {
 .newsFrame { /* Gutter between top and bottom */
 	padding-top: 10px;
 	padding-bottom: 10px;
-	height: 180px;
-	/*background-color: blue;*/
+	/*height: 180px;*/
+	background-color: #bdd8f5;
     transition-property: background-color;
     transition-duration: 1s;
     transition-timing-function: linear;		
+    background-clip: content-box;
+    border-radius: 5px;
 }
 /*
 .newsFrame:hover {
@@ -113,7 +115,7 @@ tr {
 .news {
 	border-radius:5px;
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 	cursor:pointer;
 	border: 2px;
 	box-shadow:none;
@@ -148,12 +150,12 @@ tr {
 .newsButton, .newsButtonNoImage {
 	border-radius:5px;
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 	cursor:pointer;
 	border: 2px;
 	box-shadow:none;
 	text-align: left;	
-	background-color: #bdd8f5;
+	/*background-color: #bdd8f5;*/
 	font-size: 18px;
 	line-height: 120%;
 	font-family: 'Playfair Display', serif;
@@ -163,8 +165,11 @@ tr {
 	*/
 }
 
-.newsTitle {
-	//background-color: yellow;
+.newsTitle, .newsImage {
+	/*background-color: yellow;*/
+	    padding-bottom: 20px;
+    padding-top: 20px;
+    /*background-color: yellow;*/
 }
 
 .title {
@@ -179,14 +184,14 @@ tr {
 }
 
 .newsImage {
-	padding-top: 17px;
+	/*padding-top: 17px;*/
 }
 
 a {
 	text-decoration: none; /* Take out the underline */
 /*	padding-top: 20px;
 	padding-bottom: 20px;*/	
-	color: #666666;
+	color: #3C3A3A;
 }
 /*
 .newsImage {
